<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buoy_publisher</name>
  <version>0.0.0</version>
  <description>Publish positions of buoys and markers of buoys</description>
  <maintainer email="daren@todo.todo">daren</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>visualization_msgs</depend>
  <depend>uav_interfaces</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
