<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pd_planner_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="greg.droge@usu.edu">greg</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>topic_tools</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>uav_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>
  <exec_depend>rqt_publisher</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
